fixed flickering UI

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -11,6 +11,7 @@ html {
 
 main {
     background-color: #000814;
+    
 }
 
 main h1 {
@@ -26,6 +27,7 @@ main p {
     margin-left: auto;
     margin-right: auto;
     background-color: #000814;
+    padding-bottom: 10px;
 }
 
 .columns {
@@ -37,7 +39,7 @@ main p {
 
 .column {
     min-height: 80vh;
-    width: 25%;;
+    width: 22%;;
     background-color: #22303C;
     border-radius: 15px;
     padding: 15px;
