--- a/frontend/src/styles/tasks.css
+++ b/frontend/src/styles/tasks.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     padding: 20px;
     background-color: #8899A6;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .task:hover {
